[package]
name = "mysql_async_bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql_async = "0.29.0"
tokio = { version = "1.18", features = ["full"] }
anyhow = "1"
actix-web = "4.0.1"
pretty_env_logger = "0.4.0"
log = "0.4"